[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OpenDTS"
version = "1.3.2"
description = "Description"
authors = ["Daethyra dev-daethyra@protonmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "*"
threadpoolctl = "*"
numpy = "*"
joblib = "*"
scipy = "*"
scikit-learn = "1.3.0"
pytz = "*"
python-stdnum = "*"
phonenumbers = "*"
tzdata = "*"
tqdm = "*"
python-dateutil = "*"
click = "*"
nltk = "*"
faker = "*"
dateparser = "*"
textblob = "*"
scrubadub = "*"
chardet = "*"
tensorflow = "*"
keras = "*"
pinecone-client = "*"
pandas = "*"
openai = "*"
langchain = "*"
PyPDF2 = "*"
xlrd = "*"
beautifulsoup4 = ">=4.12.2"
colorama = "0.4.6"
distro = "1.8.0"
playsound = "1.2.2"
pyyaml = "6.0.1"
python-docx = "*"
markdown = "*"
pylatexenc = "*"
readability-lxml = "0.8.1"
requests = "*"
tiktoken = "0.4.0"
gTTS = "2.3.1"
docker = "*"
duckduckgo-search = "3.0.2"
google-api-python-client = "*"
redis = "*"
orjson = "3.8.10"
Pillow = "*"
selenium = "4.10.0"
webdriver-manager = "*"
jsonschema = "*"
charset-normalizer = ">=3.1.0"
spacy = ">=3.0.0,<4.0.0"
prompt-toolkit = ">=3.0.38"
pydantic = "*"
inflection = "*"
fastapi = "*"
uvicorn = "*"
coverage = "*"
flake8 = "*"
pre-commit = "*"
black = "*"
isort = "*"
gitpython = "3.1.31"
mkdocs = "*"
pymdown-extensions = "*"
mypy = "*"
types-Markdown = "*"
types-beautifulsoup4 = "*"
types-colorama = "*"
types-Pillow = "*"
openapi-python-client = "0.13.4"
pytest = "*"
asynctest = "*"
pytest-asyncio = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-integration = "*"
pytest-mock = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
