[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OpenDTS"
version = "1.5.1"
description = "Open Domestic Threat Scanner - LLM Threat-Intelligence"
authors = ["Daethyra dev-daethyra@protonmail.com"]

[tool.poetry.dependencies]
python = ">=3.11.3,<3.12"
numpy = ">=1.22,<=1.24.3"
scikit-learn = "^0.24.2"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow = "^2.13.0"
pandas = "^1.5.3"
python-dotenv = "^0.19.2"
PyPDF2 = "^2.12.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
