[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OpenDTS"
version = "1.3.2"
description = "Description"
authors = ["Daethyra dev-daethyra@protonmail.com"]

[tool.poetry.dependencies]
[tool.poetry.dependencies]
python = "^3.11.3"
scikit-learn = "^0.24.2"
tensorflow = "^2.6.0"
pandas = "^1.3.3"
python-dotenv = "^0.19.1"
PyPDF2 = "^2.3.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
